--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,9 +26,11 @@ jobs:
 
     - name: Install dependencies
       run: npm install
+      working-directory: daystohours
 
     - name: Run tests
-      run: npm test -- daystohours/src/App.test.jsx
+      run: npm test -- src/App.test.jsx
+      working-directory: daystohours
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
