added github pages config

--- a/daystohours/package.json
+++ b/daystohours/package.json
@@ -3,15 +3,19 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://ravm.github.io/daystohours",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "tests": "react-scripts test",
-    "test": "jest"
+    "test": "jest",
+    "predeploy": "npm run build",
+    "deploy:": "gh-pages -d build"
   },
   "dependencies": {
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
