added github pages config

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -37,6 +37,7 @@ jobs:
 
     - name: Build
       run: npm run build
+      working-directory: daystohours
 
     - name: Deploy
       run: |
@@ -49,4 +50,3 @@ jobs:
         user_email: 'github-actions[bot]@users.noreply.github.com'
         github_token: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
         repository: ${{ github.repository }}
-        
