--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -16,37 +16,41 @@ jobs:
         node-version: [20.x]
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    - name: Set up Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
+      - name: Set up Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
 
-    - name: Install dependencies
-      run: npm install
-      working-directory: daystohours
+      - name: Remove node_modules and package-lock.json
+        run: rm -rf node_modules package-lock.json
+        working-directory: daystohours
 
-    - name: Run tests
-      run: npm test -- src/App.test.jsx
-      working-directory: daystohours
+      - name: Install dependencies
+        run: npm install
+        working-directory: daystohours
 
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v1
+      - name: Run tests
+        run: npm test -- src/App.test.jsx
+        working-directory: daystohours
 
-    - name: Build
-      run: npm run build
-      working-directory: daystohours
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1
 
-    - name: Deploy
-      run: |
-        git config --global user.name $user_name
-        git config --global user.email $user_email
-        git remote set-url origin https://${github_token}@github.com/${repository}
-        npm run deploy
-      env:
-        user_name: 'github-actions[bot]'
-        user_email: 'github-actions[bot]@users.noreply.github.com'
-        github_token: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
-        repository: ${{ github.repository }}
+      - name: Build
+        run: npm run build
+        working-directory: daystohours
+
+      - name: Deploy
+        run: |
+          git config --global user.name $user_name
+          git config --global user.email $user_email
+          git remote set-url origin https://${github_token}@github.com/${repository}
+          npm run deploy
+        env:
+          user_name: 'github-actions[bot]'
+          user_email: 'github-actions[bot]@users.noreply.github.com'
+          github_token: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
+          repository: ${{ github.repository }}
