--- a/daystohours/package.json
+++ b/daystohours/package.json
@@ -12,7 +12,7 @@
     "tests": "react-scripts test",
     "test": "jest",
     "predeploy": "npm run build",
-    "deploy:": "gh-pages -d build"
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "gh-pages": "^6.1.1",
