--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -48,8 +48,7 @@ jobs:
           git config --global user.name $user_name
           git config --global user.email $user_email
           git remote set-url origin https://${github_token}@github.com/${repository}
-          ls -al
-          npm run deploy
+          npm run deploy -- dist
         working-directory: daystohours
         env:
           user_name: 'github-actions[bot]'
