--- a/daystohours/package.json
+++ b/daystohours/package.json
@@ -11,8 +11,8 @@
     "preview": "vite preview",
     "tests": "react-scripts test",
     "test": "jest",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "predeploy": "npm run dist",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "gh-pages": "^6.1.1",
