--- a/daystohours/package.json
+++ b/daystohours/package.json
@@ -11,7 +11,7 @@
     "preview": "vite preview",
     "tests": "react-scripts test",
     "test": "jest",
-    "predeploy": "npm run dist",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
