--- a/daystohours/package.json
+++ b/daystohours/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "./node_modules/.bin/vite",
     "build": "vite build",
-    "lint": "./node_modules/.bin/eslint --config ./.eslintrc.json src/**/*.jsx",
+    "lint": "./node_modules/.bin/eslint --config ./.eslintrc.cjs src/**/*.jsx",
     "preview": "vite preview",
     "tests": "react-scripts test",
     "test": "jest",
@@ -15,6 +15,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@stylistic/eslint-plugin-js": "^1.7.0",
     "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
