--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -32,6 +32,10 @@ jobs:
         run: npm install
         working-directory: daystohours
 
+      - name: Run ESLint
+        run: npm run lint
+        working-directory: daystohours
+
       - name: Run tests
         run: npm test -- --coverage
         working-directory: daystohours
