--- a/daystohours/package.json
+++ b/daystohours/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "./node_modules/.bin/vite",
     "build": "vite build",
-    "lint": "./node_modules/.bin/eslint --config ./.eslintrc.cjs src/**/*.jsx -- --fix",
+    "lint": "eslint --config ./.eslintrc.cjs src/**/*.jsx",
     "preview": "vite preview",
     "tests": "react-scripts test",
     "test": "jest",
